build/cluster/004-engine.yaml
apiVersion: v1
kind: Service
metadata:
  name: engine
spec:
  selector:
    app: engine
  ports:
    - port: 3000
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      labels:
        app: engine
    spec:
      containers:
        - name: engine
          image: $IMAGE
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "-c", "node /home/node/app/dist/engine/index.js"]
          volumeMounts: $LOCAL_MOUNT
      volumes: $LOCAL_VOLUME
