build/cluster/004-logic.yaml
apiVersion: v1
kind: Service
metadata:
  name: logic
spec:
  selector:
    app: logic
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logic
  template:
    metadata:
      labels:
        app: logic
    spec:
      containers:
        - name: logic
          image: $IMAGE
          ports:
            - containerPort: 8080
          imagePullPolicy: $IMAGE_POLICY
          command: ["/bin/sh", "-c", "node /home/node/app/dist/logic/index.js"]
          volumeMounts: $LOCAL_MOUNT
          - name: service
            mountPath: /etc/firebase
      volumes: $LOCAL_VOLUME
      - name: service
        secret:
          secretName: service
