build/cluster/005-logic.yaml
apiVersion: v1
kind: Service
metadata:
  name: logic
spec:
  selector:
    app: logic
  ports:
    - port: 3001
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logic
  template:
    metadata:
      labels:
        app: logic
    spec:
      containers:
        - name: logic
          image: common:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "-c", "node /home/node/app/dist/logic/index.js"]
          volumeMounts: $LOCAL_MOUNT
      volumes: $LOCAL_VOLUME
