build/cluster/006-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logic-ingress
spec:
  tls:
  - hosts:
      - $HOST
    secretName: cert
  defaultBackend:
    service:
      name: logic
      port:
        number: 8080
